Reject button is renamed feedback instead, and the user is now able to give feedback to both the tipser and the candidate, as well as deleting the candidate

--- a/recruiter/apps/hr/templates/hr/accepted-detail.html
+++ b/recruiter/apps/hr/templates/hr/accepted-detail.html
@@ -12,6 +12,9 @@
 
     {% include 'hr/showCV-form.html' %}
 
+    {% include 'hr/feeback_button.html' %}
     <br/>
 </div>
+
+{% include 'hr/reject-user-modal.html' %}
 
