--- a/recruiter/apps/hr/templates/hr/leader_base.html
+++ b/recruiter/apps/hr/templates/hr/leader_base.html
@@ -3,14 +3,14 @@
 	{% extends 'hr/basefile-styling.html' %}
 	{% block base %}
 	<body>
-		<h2>Mine kandidater</h2>
-		<h3>Ikke behandlet</h3>
+		<h2 id="home_reg_header" style="margin-left: 5%">Mine kandidater</h2>
+		<h3 id="home_reg_header" style="margin-left: 5%">Ikke behandlet</h3>
 		<br>
 		{% block first %}
 		{% endblock %}
 		<br>
 		<br>
-		<h3>Aktuelle kandidater</h3>
+		<h3 id="home_reg_header" style="margin-left: 5%">Godkjente kandidater</h3>
 		<br>
 		<br>
 		{% block second %}
