--- a/recruiter/apps/hr/static/hr/style.css
+++ b/recruiter/apps/hr/static/hr/style.css
@@ -44,7 +44,7 @@
     border: 30px transparent;
 }
 
-#give_rejection, #send_leader, #send_hr {
+#send_leader, #send_hr {
 
     width: 110px;
     height: 30px;
@@ -54,7 +54,15 @@
 
 #give_rejection {
 
-    width: 110px;
+    width: 120px;
+    height: 30px;
+    border-radius: 30px;
+    margin-top: 5px;
+}
+
+#not_applicable {
+
+    width: 130px;
     height: 30px;
     border-radius: 30px;
     margin-top: 5px;
@@ -163,6 +171,21 @@
     border-radius: 30px;
 }
 
+#butt_green_leader{
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 0.1;
+    background-color: #008789;
+    color: #FFFFFF;
+    border: solid #008789 1px;
+    padding: 13px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 30px;
+}
+
 #omriss{
     border: solid #C0C0C0 1px;
     padding: 10px 10px;
@@ -220,6 +243,7 @@
     font-weight: 400;
     font-size: 12px;
 }
+
 
 #sent_to_leader_date {
     border-radius: 50px;
@@ -389,7 +413,6 @@
     display: inline-block;
     border-radius: 30px;
 }*/
-
 
 
 
