--- a/recruiter/apps/hr/templates/hr/reject-user-modal.html
+++ b/recruiter/apps/hr/templates/hr/reject-user-modal.html
@@ -6,16 +6,27 @@
 			<div class="modal-content" id="omriss_mail">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h3 id="send_til_leder">Send avslag</h3>
+                    <h3 id="send_til_leder">Tilbakemelding</h3>
                 </div>
                 <div class="modal-body">
 
-                    <form class="form-horizontal" action="{% url 'hr:reject-candidate' %}" method="post" enctype="multipart/form-data">
+                    <form class="form-horizontal" action="{% url 'hr:feedback' %}" method="post" enctype="multipart/form-data" id="feedback_form">
 
                         {% csrf_token %}
                         <input type="hidden" name="view_id" value="{{ view.id }}">
-                        <div class="thumbnail">
+                        <input id="id_candidate" type="hidden" name="cand_id" value="{{ candidate.user.id }}">
+                        <input type="checkbox" name="feedback_cand" id="feedback_cand{{ candidate.user.id }}"> <label>Gi tilbakemelding til kandidat</label>
+                        <br/>
+                        <input type="checkbox" name="feedback_tips" id="feedback_tips{{ candidate.user.id }}"> <label>Gi tilbakemelding til tipser</label>
+                        <br/>
+                        <input type="checkbox" name="delete_cand" id="delete_cand{{ candidate.user.id }}"> <label>Slett kandidat</label>
+                        <br/>
+                        <br/>
 
+                        <div class="thumbnail" id="feedback_candidate_div{{ candidate.user.id }}">
+                            <h4 id="home_reg_header">
+                                Tilbakemelding til kandidat:
+                            </h4>
                             <div class="form-group">
 								<div class="col-sm-offset-0 col-sm-10" style="display: inline" id="fra_til">
                                     Fra:
@@ -27,7 +38,6 @@
 
                                     Til:
                                     <input id="reject_cand_email" type="email" class="form-control" name="to_email" value="{{ candidate.user.email }}">
-                                    <input id="id_candidate" type="hidden" name="id_candidate" value="{{ candidate.user.id }}">
                                 </div>
 
                             </div>
@@ -35,22 +45,60 @@
                             <div class="form-group">
                                 <div class="col-sm-offset-0 col-sm-10">
 
-                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject" value=""/>
+                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject_cand" value=""/>
                                 </div>
                             </div>
-                            <br/>
 
-
-                            <textarea id="send_about_candidate" name="reject_candidate_text">
-                            </textarea>
+                            <h6 id="home_reg_header">Innhold:</h6>
+                            <div class="thumbnail">
+                                <textarea id="send_about_candidate" name="feedback_candidate_text">
+                                </textarea>
+                            </div>
 
                         </div>
-                        <div class="form-group">
+
+
+                        <div class="thumbnail" id="feedback_tips_div{{ candidate.user.id }}">
+                            <h4 id="home_reg_header">
+                                Tilbakemelding til tipser:
+                            </h4>
+                            <div class="form-group">
+								<div class="col-sm-offset-0 col-sm-10" style="display: inline" id="fra_til">
+                                    Fra:
+                                    <input id="from_hr_email" type="email" class="form-control" name="from_email_tips" value="{{ user.email }}"/>
+                                </div>
+                                <br/>
+                                <br/>
+								<div class="col-sm-offset-0 col-sm-10" style="display: inline" id="fra_til">
+
+                                    Til:
+                                    <input placeholder="Epost-tipser" id="reject_cand_email" type="email" class="form-control" name="to_email_tips" value="">
+                                    <input id="id_candidate" type="hidden" name="id_candidate" value="">
+                                </div>
+
+                            </div>
+                            <br/>
+                            <div class="form-group">
+                                <div class="col-sm-offset-0 col-sm-10">
+
+                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject_tips" value=""/>
+                                </div>
+                            </div>
+
+                            <h6 id="home_reg_header">Innhold:</h6>
+                            <div class="thumbnail">
+                                <textarea id="send_about_candidate" name="feedback_tips_text">
+                                </textarea>
+                            </div>
+
+                        </div>
+
+                        <div class="form-group" id="submit_div{{ candidate.user.id }}">
 
                             <div class="col-sm-offset-0 col-sm-10">
 
                                 <button id="butt_green" type="submit" class="btn btn-success">
-                                    <span class="glyphicon glyphicon-send" aria-hidden="true"></span>&nbsp; Send
+                                    <span class="glyphicon glyphicon-send" aria-hidden="true"></span>&nbsp; Utfør
                                 </button>
                             </div>
                         </div>
@@ -63,5 +111,114 @@
                 </div>
             </div>
         </div>
+
+        <script>
+
+            function triggerChange(){
+                $("#feedback_cand{{ candidate.user.id }}").trigger("change");
+                $("#feedback_tips{{ candidate.user.id }}").trigger("change");
+                $("#delete_cand{{ candidate.user.id }}").trigger("change");
+
+            }
+
+            // not working for some strange reason
+            /*
+            function checkChecked() {
+
+                var feed_c = document.getElementById("feedback_cand{{ candidate.user.id }}").checked;
+                var feed_t = document.getElementById("feedback_tips{{ candidate.user.id }}").checked;
+                var delete_c = document.getElementById("delete_cand{{ candidate.user.id }}").checked;
+
+                if(!feed_c && !feed_t && !delete_c) {
+                    $("#submit_div{{ candidate.user.id }}").hide()
+                } else {
+
+                    $("#submit_div{{ candidate.user.id }}").show()
+                }
+            }*/
+
+
+            $("#feedback_cand{{ candidate.user.id }}").change(function() {
+
+                var isChecked = document.getElementById("feedback_cand{{ candidate.user.id }}").checked;
+
+                if(isChecked) {
+
+                    document.getElementById("feedback_candidate_div{{ candidate.user.id }}").style.visibility = 'visible';
+                    document.getElementById("feedback_candidate_div{{ candidate.user.id }}").style.height = "100%";
+                    $("#feedback_candidate_div{{ candidate.user.id }}").show()
+
+
+                } else {
+
+                    document.getElementById("feedback_candidate_div{{ candidate.user.id }}").style.height = "0%";
+                    document.getElementById("feedback_candidate_div{{ candidate.user.id }}").style.visibility = 'hidden';
+                    $("#feedback_candidate_div{{ candidate.user.id }}").hide()
+
+                }
+                var feed_c = document.getElementById("feedback_cand{{ candidate.user.id }}").checked;
+                var feed_t = document.getElementById("feedback_tips{{ candidate.user.id }}").checked;
+                var delete_c = document.getElementById("delete_cand{{ candidate.user.id }}").checked;
+
+                if(!feed_c && !feed_t && !delete_c) {
+                    $("#submit_div{{ candidate.user.id }}").hide()
+                } else {
+
+                    $("#submit_div{{ candidate.user.id }}").show()
+                }
+
+                //checkChecked()
+            });
+
+            $("#feedback_tips{{ candidate.user.id }}").change(function() {
+
+                var isChecked = document.getElementById("feedback_tips{{ candidate.user.id }}").checked;
+
+                if(isChecked) {
+
+                    document.getElementById("feedback_tips_div{{ candidate.user.id }}").style.visibility = 'visible';
+                    document.getElementById("feedback_tips_div{{ candidate.user.id }}").style.height = "100%";
+                    $("#feedback_tips_div{{ candidate.user.id }}").show()
+
+
+                } else {
+
+                    document.getElementById("feedback_tips_div{{ candidate.user.id }}").style.height = "0%";
+                    document.getElementById("feedback_tips_div{{ candidate.user.id }}").style.visibility = 'hidden';
+                    $("#feedback_tips_div{{ candidate.user.id }}").hide()
+
+                }
+                var feed_c = document.getElementById("feedback_cand{{ candidate.user.id }}").checked;
+                var feed_t = document.getElementById("feedback_tips{{ candidate.user.id }}").checked;
+                var delete_c = document.getElementById("delete_cand{{ candidate.user.id }}").checked;
+
+                if(!feed_c && !feed_t && !delete_c) {
+                    $("#submit_div{{ candidate.user.id }}").hide()
+                } else {
+
+                    $("#submit_div{{ candidate.user.id }}").show()
+                }
+                //checkChecked()
+            });
+
+            $("#delete_cand{{ candidate.user.id }}").change(function() {
+
+                //checkChecked()
+                var feed_c = document.getElementById("feedback_cand{{ candidate.user.id }}").checked;
+                var feed_t = document.getElementById("feedback_tips{{ candidate.user.id }}").checked;
+                var delete_c = document.getElementById("delete_cand{{ candidate.user.id }}").checked;
+
+                if(!feed_c && !feed_t && !delete_c) {
+                    $("#submit_div{{ candidate.user.id }}").hide()
+                } else {
+
+                    $("#submit_div{{ candidate.user.id }}").show()
+                }
+
+            });
+
+            triggerChange();
+
+        </script>
 
 </div>
