--- a/recruiter/apps/hr/templates/hr/rejected-detail.html
+++ b/recruiter/apps/hr/templates/hr/rejected-detail.html
@@ -15,11 +15,7 @@
     </div>
 
     {% include 'hr/showCV-form.html' %}
-
-    <button data-toggle="modal" data-target="#reject{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="give_rejection">
-        Gi avslag
-        <span class="glyphicon glyphicon-remove"></span>
-    </button>
+    {% include 'hr/feeback_button.html' %}
 
     <button data-toggle="modal" data-target="#send{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="send_new_leader">
         Send til ny leder
