Add standard emails and possibility to edit mails

--- a/recruiter/apps/hr/templates/hr/register-user-modal.html
+++ b/recruiter/apps/hr/templates/hr/register-user-modal.html
@@ -51,7 +51,9 @@
                             <label>Innhold:</label>
                             <br id="small_space"/>
                             <div class="thumbnail">
-                                <textarea class="tips_mail_custom" id="tips_mail_custom{{ candidate.id }}" name="mail_to_cand"></textarea>
+                                <textarea class="tips_mail_custom" id="tips_mail_custom{{ candidate.id }}" name="mail_to_cand">
+For at vi skal kunne holde orden på CVer som vi er interessert i utenfor våre utlyste stillinger, har vi implementert en smart løsning som gjør prosessen for å matche deg med en aktuell avdeling mye mer effektiv. Alt vi trenger fra deg er CV. Informasjonen du legger inn vil deles med personer fra HR, samt aktuelle ledere.
+								</textarea>
                             </div>
 
                         </div>
