--- a/recruiter/apps/hr/templates/hr/new-candidate-modal.html
+++ b/recruiter/apps/hr/templates/hr/new-candidate-modal.html
@@ -23,6 +23,7 @@
 
                          <div class="thumbnail" id="regUserDiv">
                              <textarea id="send_about_candidate" name="welcome_text">
+For at vi skal kunne holde orden på CVer som vi er interessert i utenfor våre utlyste stillinger, har vi implementert en smart løsning som gjør prosessen for å matche deg med en aktuell avdeling mye mer effektiv. Alt vi trenger fra deg er CV. Informasjonen du legger inn vil deles med personer fra HR, samt aktuelle ledere.
                              </textarea>
                          </div>
 
