--- a/recruiter/apps/hr/templates/hr/send-to-leader-modal.html
+++ b/recruiter/apps/hr/templates/hr/send-to-leader-modal.html
@@ -41,7 +41,7 @@
                             <div class="form-group">
                                 <div class="col-sm-offset-0 col-sm-10" id="informasjonsfelt_mail">
 
-                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject" value=""/>
+                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject" value="Ny interresant kandidat"/>
                                 </div>
                             </div>
                             <br/>
@@ -50,6 +50,7 @@
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Tekst om kandidat:
                             </label>
                             <textarea id="send_about_candidate" name="text_candidate" placeholder="Info om kandidat">
+Jeg har funnet en/flere kandidat(er) som kan være interessante for deg. Vennligst følg linken under for å ta en titt på denne/disse kandidaten(e).
                             </textarea>
 
                             <input type="text" id="hr_comment" name="hr_comment" value="" placeholder="Kommentar(valgfritt)" maxlength="100">
