nå kan Hr ta ledervalg

--- a/recruiter/apps/hr/templates/hr/untreated-detail.html
+++ b/recruiter/apps/hr/templates/hr/untreated-detail.html
@@ -29,7 +29,7 @@
 
     {% include 'hr/feeback_button.html' %}
 
-    <button class="btn btn-default btn-sm" data-toggle="modal" data-target="#send{{ candidate.user.id }}" style="display: inline" id="send_leader">
+    <button class="btn btn-default btn-sm" data-toggle="modal" data-target="#send{{ candidate.user.id }}" style="display: inline" id="butt_paminnelse">
         <span class="glyphicon glyphicon-send" aria-hidden="true"></span>&nbsp; Send til leder
     </button>
 
