--- a/recruiter/apps/hr/templates/hr/feeback_button.html
+++ b/recruiter/apps/hr/templates/hr/feeback_button.html
@@ -1,4 +1,4 @@
-<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#reject{{ candidate.user.id }}" style="display: inline" id="give_rejection">
+<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#reject{{ candidate.user.id }}" style="display: inline" id="butt_paminnelse">
     <span class="glyphicon glyphicon-circle-arrow-right"></span>
     Tilbakemelding
 </button>
