--- a/recruiter/apps/hr/templates/hr/in-process-detail.html
+++ b/recruiter/apps/hr/templates/hr/in-process-detail.html
@@ -30,7 +30,13 @@
         <span class="glyphicon glyphicon-bell"></span>
     </button>
 
+    <button data-target="#override{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="butt_paminnelse" data-toggle="modal">
+        Overstyr leder
+        <span class="glyphicon glyphicon-king"></span>
+    </button>
+
     <br/>
 </div>
 
 {% include 'hr/notify-modal.html' %}
+{% include 'hr/override-leader-modal.html' %}
