--- a/recruiter/apps/hr/templates/hr/leader_view.html
+++ b/recruiter/apps/hr/templates/hr/leader_view.html
@@ -22,8 +22,8 @@
                     <div id="left">
                         <form class="form-horizontal" method="post" enctype="multipart/form-data">
                             {% csrf_token %}
-                            <input id="id_candidate" type="hidden" name="id_candidate" value="{{ candidate.user.id }}">
-                            <input style="width: 500px;height: 50px" id="comment" name="comment" type="text" placeholder="Kommentar">
+                            <input id="id_candidate" type="hidden" name="id_candidate" value="{{ candidate.user.id }}">
+                            <input style="width: 100%;height: 50px" id="comment" name="comment" type="text" placeholder="Kommentar">
                             <br/>
                             <br/>
                             <button id="butt_green_leader" name="accept" type="submit" class="btn btn-success">Aktuell kandidat</button>
