--- a/recruiter/apps/hr/templates/hr/rejected-detail.html
+++ b/recruiter/apps/hr/templates/hr/rejected-detail.html
@@ -17,7 +17,7 @@
     {% include 'hr/showCV-form.html' %}
     {% include 'hr/feeback_button.html' %}
 
-    <button data-toggle="modal" data-target="#send{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="send_new_leader">
+    <button data-toggle="modal" data-target="#send{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="butt_paminnelse">
         Send til ny leder
         <span class="glyphicon glyphicon-send"></span>
     </button>
