--- a/recruiter/apps/hr/templates/hr/detail-base.html
+++ b/recruiter/apps/hr/templates/hr/detail-base.html
@@ -1,5 +1,5 @@
-<label>{{ candidate.user.get_full_name }}</label>
-<h6>{{ candidate.user.email }}</h6>
-<h6>{{ candidate.user.phone }}</h6>
-<h6>{{ candidate.text }}</h6>
+<label id="home_reg_header">{{ candidate.user.get_full_name }}</label>
+<h6 id="home_reg_header">{{ candidate.user.email }}</h6>
+<h6 id="home_reg_header">{{ candidate.user.phone }}</h6>
+<h6 id="home_reg_header">{{ candidate.text }}</h6>
 <br/>
