Add field of work for candidates

--- a/recruiter/apps/hr/templates/hr/untreated-detail.html
+++ b/recruiter/apps/hr/templates/hr/untreated-detail.html
@@ -33,7 +33,10 @@
         <span class="glyphicon glyphicon-send" aria-hidden="true"></span>&nbsp; Send til leder
     </button>
 
+	{% include 'hr/work_field_button.html' %}
+
 </div>
 
 {%  include 'hr/reject-user-modal.html'%}
 {%  include 'hr/send-to-leader-modal.html' %}
+{% include 'hr/field-of-work-modal.html' %}
