--- a/recruiter/apps/candidate/templates/candidate/form_template.html
+++ b/recruiter/apps/candidate/templates/candidate/form_template.html
@@ -1,5 +1,5 @@
 {% for field in form %}
-<div class="form-group" id="form_group_login">
+<div style="border-radius: 15px;width: 60%" class="thumbnail" id="form_group_login">
 	<div>
 		<span class="text-danger small">{{ field.error }}</span>
 	</div>
