--- a/recruiter/apps/candidate/templates/candidate/profile.html
+++ b/recruiter/apps/candidate/templates/candidate/profile.html
@@ -23,12 +23,12 @@
 			<ul class="nav navbar-nav">
 				<li class="">
 					<a href="{% url 'candidate:cv_view' user_id=user.id %}" id="headtekst">
-						My CV
+						Min CV
 					</a>
 				</li>
 				<li class="">
 					<a href="" id="headtekst">
-						Edit Profile
+						Rediger Profil
 					</a>
 				</li>
 			</ul>
@@ -36,7 +36,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li class="">
 					<a href="{% url 'candidate:logout_user' %}" id="headtekst">
-						<span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Log out
+						<span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logg ut
 					</a>
 				</li>
 			</ul>
