--- a/recruiter/apps/candidate/templates/candidate/profile_info.html
+++ b/recruiter/apps/candidate/templates/candidate/profile_info.html
@@ -8,25 +8,25 @@
 	<!--<div class="row">-->
 		<!--<div class="col-sm-12 col-md-6">-->
 			<div class="panel panel-default" id="omriss">
-				<div class="panel-heading" id="brukinf">User Info</div>
+				<div class="panel-heading" id="brukinf">Bruker Info</div>
 				<div class="panel-body">
 					<dl>
-						<dt id="inform">Name:</dt> 
+						<dt id="inform">Navn:</dt>
 						<dd id="fill">{{ user.get_full_name }}</dd>
 						<br>
 						<dt id="inform">E-mail:</dt>
 						<dd id="fill">{{ user.get_email }}</dd>
 						<br>
-						<dt id="inform">Telephone:</dt>
+						<dt id="inform">Telefon:</dt>
 						<dd id="fill">{{ user.get_phone }}</dd>
 						<br>
 					</dl>
-					<button class="btn btn-info" id="butt" data-toggle="modal" data-target="#deleteProfile{{ user.id }}">
-						Delete Profile
+					<button class="btn btn-info" id="butt" data-toggle="modal" data-target="#deleteProfile{{ user.id }}">
+						Slett Profil
 					</button>
 					{% include 'candidate/delete-user-modal.html' %}
 					<!-- <a href="" class="btn btn-info" role="button" id="butt">Delete Profile</a> -->
-					<a href="{% url 'candidate:upload' %}" class="btn btn-danger" role="button" id="butt">Change CV</a>
+					<a href="{% url 'candidate:upload' %}" class="btn btn-danger" role="button" id="butt">Endre CV</a>
 				</div>
 			</div>
 		</div>
