Finish mails sent out by system

--- a/recruiter/apps/candidate/templates/candidate/finished_registration.html
+++ b/recruiter/apps/candidate/templates/candidate/finished_registration.html
@@ -1,7 +1,10 @@
 {% extends 'candidate/base.html' %}
 {% block title %}Thank you{% endblock %}
 {% block body %}
-<h3>Thank you for registering</h3>
-<p>You will be contacted as soon as possible</p>
+<h4>Takk, {{ name }}</h4>
+<br>
+<p>Du har nå registrert din CV hos oss. Du vil høre fra oss dersom det dukker opp spennende stillinger som er aktuelle for deg.</p>
+<br>
+<p>Ha en fin dag!</p>
 
 {% endblock %}
