--- a/recruiter/apps/hr/templates/hr/reject-user-modal.html
+++ b/recruiter/apps/hr/templates/hr/reject-user-modal.html
@@ -45,13 +45,14 @@
                             <div class="form-group">
                                 <div class="col-sm-offset-0 col-sm-10">
 
-                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject_cand" value=""/>
+                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject_cand" value="DNB: Ingen relevante stillinger per tidspunkt."/>
                                 </div>
                             </div>
 
                             <h6 id="home_reg_header">Innhold:</h6>
                             <div class="thumbnail">
                                 <textarea id="send_about_candidate" name="feedback_candidate_text">
+Jeg har undersøkt hvorvidt vi har en ledig posisjon som passer din profil i en av våre avdelinger. Dessverre har vi ingen stillinger som er relevant for deg på nåværende tidspunkt.
                                 </textarea>
                             </div>
 
@@ -81,13 +82,16 @@
                             <div class="form-group">
                                 <div class="col-sm-offset-0 col-sm-10">
 
-                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject_tips" value=""/>
+                                    <input placeholder="Emne: " id="emne" type="text" class="form-control" name="subject_tips" value="Ditt tips"/>
                                 </div>
                             </div>
 
                             <h6 id="home_reg_header">Innhold:</h6>
                             <div class="thumbnail">
                                 <textarea id="send_about_candidate" name="feedback_tips_text">
+Hei. 
+
+Kandidaten du tipset om er dessverre ikke aktuell på dette tidspunkt. Takk for tipset.
                                 </textarea>
                             </div>
 
