--- a/recruiter/apps/hr/templates/hr/work_field_button.html
+++ b/recruiter/apps/hr/templates/hr/work_field_button.html
@@ -1,3 +1,3 @@
-<button class="btn btn-default bt-sm" data-toggle="modal" data-target="#fieldOfWork{{ candidate.user.id }}" id="send_leader">
+<button class="btn btn-default bt-sm" data-toggle="modal" data-target="#fieldOfWork{{ candidate.user.id }}" id="butt_paminnelse">
 	<span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>&nbsp; Arbeidsområder
 </button>
