--- a/recruiter/apps/candidate/static/candidate/style.css
+++ b/recruiter/apps/candidate/static/candidate/style.css
@@ -49,27 +49,121 @@ body{
 
     background-color: #008789;
     opacity: 0.9;
-    float: left;
     position: absolute;
     left: 20vh;
     right: 20vh;
     top: 10vh;
-    margin-bottom: 100px;
     float: right;
-    max-width: 80vh;
+    max-width: 90vh;
+    min-width: 60vh;
     margin: auto;
     display: block;
-    padding-top: 0px;
+    padding-top: 0;
     color: #fcfcfc;
+    border-style: solid;
+    border-color: #C0C0C0;
+    border-width: 1px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+
+#bottom_bar_top {
+
+    margin-left: -15px;
+    margin-right: -15px;
+    height: 50px;
+    background-color: white;
+    border-color: #C0C0C0;
+    border-style: ridge;
+    border-width: 1px;
+    border-right: hidden;
+    border-left: hidden;
+    margin-bottom: -2px;
+}
+
+#bottom_bar_bottom {
+
+    margin-left: -15px;
+    margin-right: -15px;
+    height: 50px;
+    background-color: white;
+    border-color: #C0C0C0;
+    border-style: solid;
+    border-width: 1px;
+    border-right: hidden;
+    border-left: hidden;
+    margin-bottom: -16px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+.button_register_uncompleted {
+
+	font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+	font-size: 14px;
+    height: 30px;
+    background-color: #FFFFFF;
+    color: #000000;
+    border: solid #C0C0C0 1px;
+    border-radius: 30px;
+    padding-top: 3px;
+    padding-bottom: 20px;
+    width: 100px;
+}
+
+.button_register_completed {
+
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+	font-size: 14px;
+    background-color: #008789;
+    color: #FFFFFF;
+    border: solid #008789 1px;
+    border-radius: 30px;
+    padding-top: 3px;
+    padding-bottom: 20px;
+    width: 100px;
+}
+
+#register_welcome_text {
+
+    margin-left: 40%;
+}
+
+#register_fields {
+
+    margin-left: 0;
+    padding-top: 6px;
+}
+
+#reg_label_fields {
+
+    margin-left: -4%;
+    font-weight: 100;
 
 }
 
+#reg_label {
 
-#personvern{
+    font-family: "Segoe UI",Arial,sans-serif;
+    color: black;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+input#id_cv-cv {
+
+    /*border-style: solid;
+    border-width: 1px;
+    border-radius: 30px;*/
+}
+
+#personvern {
     padding-top: 5%;
 }
 
-#personvern a{
+#personvern a {
     text-decoration: underline;
 }
 
@@ -139,8 +233,8 @@ body{
 	border-radius: 30px;
 	padding: 5px 20px;
 	border-width: 1px;
-}
 
+}
 
 .navbar-header, #topNavBar, #headtekst{
 	background-color: #FFFFFF;
