Delete cv when user is deleted and minor fixes

--- a/recruiter/apps/candidate/templates/candidate/finished_registration.html
+++ b/recruiter/apps/candidate/templates/candidate/finished_registration.html
@@ -1,7 +1,7 @@
 {% extends 'candidate/base.html' %}
 {% block title %}Thank you{% endblock %}
 {% block body %}
-<h4>Takk, {{ name }}</h4>
+<h4>Takk,</h4>
 <br>
 <p>Du har nå registrert din CV hos oss. Du vil høre fra oss dersom det dukker opp spennende stillinger som er aktuelle for deg.</p>
 <br>
