--- a/recruiter/apps/candidate/templates/candidate/finished_registration.html
+++ b/recruiter/apps/candidate/templates/candidate/finished_registration.html
@@ -1,10 +1,21 @@
 {% extends 'candidate/base.html' %}
 {% block title %}Thank you{% endblock %}
 {% block body %}
-<h4>Takk,</h4>
-<br>
-<p>Du har nå registrert din CV hos oss. Du vil høre fra oss dersom det dukker opp spennende stillinger som er aktuelle for deg.</p>
-<br>
-<p>Ha en fin dag!</p>
+
+<div id="finished-wrapper">
+	<div>
+		<img id="back_picture" src="/static/candidate/barcode2.jpg">
+	</div>
+	<div class="panel-body" id="panel_body_finished">
+	<img src="/static/candidate/finished.png" id="upload_image">
+	<hr id="mid_line">
+	<div id="registrer_interesse"><h3 >Søknaden er innlevert</h3></div>
+		<div id="finished_text">
+			<p>Tusen takk for din CV!</p>
+			<p>Vi holder deg oppdatert videre per e-post.</p>
+			<p>Hvis det er noe du lurer på, så ikke nøl med å ta kontakt.</p>
+		</div>
+	</div>
+</div>
 
 {% endblock %}
