logo in header, + small style changes

--- a/recruiter/apps/candidate/templates/candidate/base.html
+++ b/recruiter/apps/candidate/templates/candidate/base.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-	<div id="wrapperHeader">
 		<div id="header">
-			<p><a href="{% url 'candidate:profile' %}" id="header" img src="dnblogo.png"></a></p>
+			<a href="{% url 'candidate:profile' %}" id="logo" ><img src="/static/candidate/dnb-logo.png"></a>
 		</div>
-	</div>
 	<head>
 		<meta charset="UTF-8">
 		<title>{% block title %}DNB Recruiter{% endblock %}</title>
