--- a/recruiter/apps/candidate/templates/candidate/finished_registration.html
+++ b/recruiter/apps/candidate/templates/candidate/finished_registration.html
@@ -6,10 +6,10 @@
 	<div>
 		<img id="back_picture" src="/static/candidate/barcode2.jpg">
 	</div>
-	<div class="panel-body" id="panel_body_finished">
+	<div class="panel-body" id="panel_body_register">
 	<img src="/static/candidate/finished.png" id="upload_image">
-	<hr id="mid_line">
-	<div id="registrer_interesse"><h3 >Søknaden er innlevert</h3></div>
+	<hr id="mid_line_f">
+	<div id="ferdig_interesse"><h3 >Søknaden er innlevert</h3></div>
 		<div id="finished_text">
 			<p>Tusen takk for din CV!</p>
 			<p>Vi holder deg oppdatert videre per e-post.</p>
@@ -17,5 +17,6 @@
 		</div>
 	</div>
 </div>
+
 
 {% endblock %}
