--- a/recruiter/apps/candidate/static/candidate/style.css
+++ b/recruiter/apps/candidate/static/candidate/style.css
@@ -12,6 +12,10 @@ body{
    position: relative;
 }
 
+#mid_line_f{
+    margin-top: 15vh;
+}
+
 #wrap{
     position: relative;
 }
@@ -259,6 +263,21 @@ body{
     background-color: #008789;
     padding: 10px;
 }
+
+#ferdig_interesse{
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 0.1;
+    color: #fff;
+    position: absolute;
+    float: left;
+    top: 39vh;
+    left: 5vh;
+    background-color: #008789;
+    padding: 10px;
+}
+
 #usboks1{
 
 	font-family: "Segoe UI",Arial,sans-serif;
@@ -355,24 +374,16 @@ body{
     margin-left: 5%;
 }
 
-div#wrapperHeader {
- width: 50%;
- height: 110px;
- background:url(dnblogo.png) no-repeat;
- text-align:right;
+#header {
+ height: 5vh;
+ padding-left: 10%;
 }
 
-div#wrapperHeader div#header {
- width: 100px;
- height: 80px;
+#header img {
+ height: 100%;
  margin: 0 auto;
 }
 
-div#wrapperHeader div#header img {
- width: 200%;
- height: 100px;
- margin: 0 auto;
-}
 
 #privacyPolicy {
     width: 110px;
